feat: Implementation chemins relatifs + gitignore archives
- Implementation systeme chemins relatifs pour images
- Conversion 11 cartes existantes vers format relatif
- Fonctions convert_to_relative_path et resolve_relative_path
- Scripts gestion base donnees et images
- Gitignore mis a jour pour exclure archives ZIP
- Nouvel executable avec chemins relatifs fonctionnel

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,13 @@ build/
 dist/
 *.spec
 
+# Archives et fichiers compressés
+*.zip
+*.tar.gz
+*.tar.bz2
+*.7z
+*.rar
+
 # Base de données locale (contient des données utilisateur)
 cartes.db
 *.db
